# washit-bot

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
src/: commands.rs  handlers.rs  lib.rs  libs.rs  main.rs  test_helpers.rs  utils.rs
src/commands/: epl_standing.rs  imagine.rs  math.rs  meta.rs  rw.rs
src/handlers/: chat.rs  ming.rs  twitter.rs
src/libs/: epl_data_client.rs
src/utils/: openai.rs  redis_client.rs
