[package]
name = "washit-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
redis = "0.22.3"
lazy_static = "1.4.0"
serenity = { version = "0.11", features = [
    "cache",
    "framework",
    "standard_framework",
    "rustls_backend",
] }
tokio = { version = "1.26.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
regex = "1.7.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.157"
serde_json = "1.0.94"
tracing = "0.1"
tracing-subscriber = "0.3"
