[package]
name = "washit-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
redis = "0.23.3"
once_cell = "1.19.0"
poise = "0.6.1"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "builder",
    "standard_framework",
] }
tokio = { version = "1.43.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.105"
tracing = "0.1"
tracing-subscriber = "0.3"
comfy-table = "7.1.1"
